<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.developmentpatterns.steve.notificationcompat.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_small"
        android:id="@+id/buttonSmall"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_large"
        android:id="@+id/buttonLarge"
        android:layout_below="@+id/buttonSmall"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_actions"
        android:id="@+id/buttonAction"
        android:layout_below="@+id/buttonLarge"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button4"
        android:layout_below="@+id/buttonAction"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_sound"
        android:id="@+id/buttonSound"
        android:layout_below="@+id/buttonAction"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_big_text"
        android:id="@+id/buttonBigTextStyle"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_big_picture"
        android:id="@+id/buttonBigPictureStyle"
        android:layout_below="@+id/buttonBigTextStyle"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_inbox"
        android:id="@+id/buttonInboxStyle"
        android:layout_below="@+id/buttonBigPictureStyle"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_media"
        android:id="@+id/buttonMediaStyle"
        android:layout_below="@+id/buttonInboxStyle"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
